service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bluegreenlb
spec:
  selector:
    app: green
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
