ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  rules:
    - host: kubelocal.local
      http:
        paths:
          - path: /v1
            backend:
              serviceName: nginx-service-v1
              servicePort: 80
          - path: /v2
            backend:
              serviceName: nginx-service-v2
              servicePort: 80
